k8s/website-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: cyberlearnix
  labels:
    app: website-service
spec:
  type: ClusterIP
  selector:
    app: website-service
  ports:
  - name: http
    port: 8082
    targetPort: 8082
    protocol: TCP
